# ha-checkiday

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  hacs.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: hacs.yaml  hassfest.yaml  lint.yaml
custom_components/checkiday/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  diagnostics.py  icons.json  manifest.json  sensor.py  strings.json
custom_components/checkiday/translations/: en.json
